Fix spacing for smaller viewports

--- a/src/pages/Resume/resume.css
+++ b/src/pages/Resume/resume.css
@@ -14,16 +14,20 @@
  */
 #intro-text-container {
   font-size: 5em;
-  padding: 40px;
+  padding: 40px 0;
   max-width: 630px !important;
   flex-grow: 0;
   margin-right: 0 !important;
 }
 
+/**
+ * Responsive header for smaller screens (tablets + mobile)
+ */
 @media only screen and (max-width: 768px) {
   #intro-text-container {
     margin: auto !important;
     width: 100% !important;
+    text-align: center;
   }
 }
 
@@ -36,7 +40,7 @@
   display: inline-flex;
   background: var(--lightGradient);
   border-radius: 4px;
-  margin: 5px;
+  margin-right: 5px;
   padding: 2px;
   box-shadow: none;
   transition: box-shadow 0.7s linear;
